syntax = "proto3";

package pb;

option go_package = "hms-project/grpc/users/pb";

message UserRequest {
    string FullName = 1;
	string Username = 2;
	string Avatar   = 3;
	string Password = 4;
    string Role     = 5;
	string By 		= 6;
}

message UserResponse {
    string FullName = 1;
	string Username = 2;
	string Avatar   = 3;
    string Role     = 4;
    string ID       = 5;
}
service UserMgt {
    rpc AddUser (UserRequest) returns (UserResponse);
}